test/libsolidity/syntaxTests/parsing/user_defined_value_type_err.sol
type(MyInt) is uint256;
// ----
// ParserError 7858: (0-4): Expected pragma, import directive or contract/interface/library/struct/enum/constant/function definition.
